// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/columns/Series renders correctly 1`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span>
       
    </span>
    Rallycross
  </button>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders correctly 2`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span>
       
    </span>
    Rallycross
  </button>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders correctly 3`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <span>
       
    </span>
    Rallycross
  </button>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={Array []}
    seriesId={345}
  />
</td>
`;

exports[`components/columns/Series renders favourite series 1`] = `
<td
  className="clickableCell"
>
  <button
    className="cellButton"
    onClick={[Function]}
    onKeyPress={[Function]}
    type="button"
  >
    <StarIcon />
    <span>
       
    </span>
    Rallycross
  </button>
  <SeriesModal
    isOpen={false}
    onClose={[Function]}
    ownedTracks={
      Array [
        123,
      ]
    }
    seriesId={345}
  />
</td>
`;
